Fixing position align box

--- a/styles.scss
+++ b/styles.scss
@@ -6,7 +6,7 @@
 
 %form-shape{
     display: block;
-    margin: 5px auto;
+    margin: 8px 5px;
 
     //Shape
     outline: none;
@@ -29,6 +29,11 @@
     top: 45%;
     left: 50%;
     transform:translate(-50%,-50%);
+}
+
+.form-content {
+    display: block;
+    text-align: center;
 }
 
 .form-wrapper .form-content input[type="text"] {
@@ -58,16 +63,17 @@
     box-shadow: 3px 3px 8px 2px #888888;
 }
 
-.form-wrapper .form-content input[type="submit"] {
+.form-wrapper .form-content input[type="submit"], button[type="button"] {
     @extend %form-shape;
     background: #ffffff;
-    box-shadow: 3px 3px #888888;
-    border: 2px solid #888888;
+    box-shadow: 3px 3px #cac8c8;
+    border: 2px solid #cac8c8;
 
+    display: inline-block;
     text-align: center;
 
     //Shape size
-    padding: 10px 25px;
+    padding: 8px 20px;
     cursor: pointer;
 
     //Text
@@ -75,9 +81,8 @@
     color: black;
 }
 
-.form-wrapper .form-content input[type="submit"]:Hover {
-    background: #888888;
-
+.form-wrapper .form-content input[type="submit"]:Hover, button[type="button"]:Hover {
+    background: #cac8c8;
     text-align: center;
 
     //Text
